8366841: [lworld] Objects.equals without identity comparison If --enable-preview, Objects.equals does not use `(a == b)` before `a.equals(b)`.